# vision-experiments

./: .gitignore  README.md  main.py  pyproject.toml
src/: compute_features.py  constants.py  diffusion_dataset.py  diffusion_model.py  diffusion_trainer.py  embedding_dataset.py  embedding_model.py  embedding_trainer.py  font_dataset.py  scan_google_fonts.py  test_diffusion_model.py  train_embedding_model.py
