[project]
name = "vision-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.61.1",
    "freetype-py>=2.5.1",
    "numpy>=2.2.6",
    "pillow>=12.0.0",
    "pytorch-lightning>=2.5.6",
    "scikit-image>=0.25.2",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
